--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1",
     "react-scripts": "3.4.3",
-    "react-syntax-highlighter": "^13.5.3"
+    "react-syntax-highlighter": "^13.5.3",
+    "react-useportal": "^1.0.13"
   },
   "scripts": {
     "start": "react-scripts start",
