--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-markdown": "^4.3.1",
     "react-scripts": "3.4.3",
     "react-syntax-highlighter": "^13.5.3",
+    "react-useanimations": "^2.0.5",
     "react-useportal": "^1.0.13"
   },
   "scripts": {
