--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@use-it/interval": "^0.1.3",
     "axios": "^0.20.0",
     "dotenv": "^8.2.0",
     "faunadb": "^3.0.1",
