--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "muicss": "^0.10.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-loadable": "^5.5.0",
     "react-markdown": "^4.3.1",
     "react-scripts": "3.4.3",
     "react-syntax-highlighter": "^13.5.3",
