--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@use-it/interval": "^0.1.3",
     "axios": "^0.20.0",
+    "datocms-client": "^3.1.1",
     "dotenv": "^8.2.0",
     "faunadb": "^3.0.1",
     "muicss": "^0.10.2",
